--- a/css/app.css
+++ b/css/app.css
@@ -50,8 +50,12 @@ h1 {
   border-style: solid;
   border-width: 1px;
   border-color: grey;
+  transition: 0.3s;
+  -webkit-transition: 0.3;
 }
 
 .sub-navegacion:hover{
   box-shadow: 0px 0px 5px 0px rgba(31, 129, 6, 0.9);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(31, 129, 6, 0.9);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(31, 129, 6, 0.9);
 }
