--- a/css/contenido.css
+++ b/css/contenido.css
@@ -3,6 +3,11 @@
   src: url("../fonts/VAGRoundedStd-Light.otf");
 }
 
+html,
+body {
+  height: 100%;
+}
+
 /* Sidebar */
 .sidenav {
   height: 100%;
@@ -26,26 +31,19 @@
   color: #fff;
   display: block;
   transition: 0.3s;
+  font-family: checfont1;
 }
 
 .sidenav a:hover {
-  color: #fff;
-  background-color: rgba(78, 161, 9, 0.6);
+  color: #000;
+  background-color: rgb(255, 255, 255);
+  padding-left: 5px;
 }
 
 .main {
   margin-left: 160px; /* Same as the width of the sidenav */
   font-size: 28px; /* Increased text to enable scrolling */
   padding: 0px 10px;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {
-    padding-top: 15px;
-  }
-  .sidenav a {
-    font-size: 18px;
-  }
 }
 
 /* Img sidenav */
@@ -55,15 +53,128 @@
 
 #nav {
   padding-left: 380px;
+  width: 100%;
+  position: fixed;
 }
 
 .top-bar {
-  background-color: rgba(78, 161, 9, 0.8  );
   font-family: checfont1;
+  background-image: url(../img/main-fondo.jpg);
 }
 
 #img-sidebar {
   display: flex;
   justify-content: center;
   padding-bottom: 4em;
+}
+
+.top-bar-left {
+  font-size: 2em;
+  color: #fff;
+}
+
+div#main_generalidades {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding-left: 380px;
+  padding-top: 55px;
+}
+
+div#generalidades {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 80%;
+  height: 80%;
+  border-style: solid;
+  border-width: 1.1px;
+  border-color: grey;
+  border-radius: 5px;
+  background-image: url(../img/generalidades-fondo.png);
+  background-size: cover;
+}
+
+div#header-generalidades {
+  background-color: green;
+  width: 100%;
+  height: auto;
+  align-self: flex-start;
+  font-family: checfont1;
+  font-size: 3em;
+  color: #fff;
+  text-align: center;
+}
+
+div#content-generalidades {
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  height: 85%;
+  background-color: rgba(26, 125, 23, 0.5);
+  font-family: checfont1;
+  color: white;
+  padding: 3%;
+  overflow-y: auto;
+  border-radius: 5px;
+  flex-wrap: wrap;
+}
+
+div#content-criterios {
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  height: 85%;
+  background-color: rgba(26, 125, 23, 0.5);
+  font-family: checfont1;
+  color: white;
+  padding: 3%;
+  overflow-y: auto;
+  border-radius: 5px;
+  flex-direction: column;
+}
+
+p {
+  font-size: 18px;
+  text-align: justify;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 5px;
+}
+
+#generalidades-button {
+  border-color: #000;
+  color: #000;
+}
+
+#generalidades-button:hover {
+  border-color: white;
+  color: white;
+}
+
+.accordion{
+  border-radius: 5px;
+  background-color: #595959cc;
+  font-size: 1em;
+}
+
+.accordion-title{
+  color: #fff;
+  transition: 0.3s;
+}
+
+.accordion-title:hover{
+  color: green;
+}
+
+/* @MEDIA QUERYS*/
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
