--- a/css/contenido.css
+++ b/css/contenido.css
@@ -11,7 +11,7 @@ body {
 /* Sidebar */
 .sidenav {
   height: 100%;
-  width: 380px;
+  width: 380px; 
   position: fixed;
   z-index: 1;
   top: 0;
@@ -144,12 +144,12 @@ p {
   padding: 5px;
 }
 
-#generalidades-button {
+button#generalidades-button {
   border-color: #000;
   color: #000;
 }
 
-#generalidades-button:hover {
+button#generalidades-button:hover {
   border-color: white;
   color: white;
 }
@@ -167,6 +167,72 @@ p {
 
 .accordion-title:hover{
   color: green;
+}
+
+.accordion-content{
+  text-align: center;
+}
+
+button#criterios-button{
+  border-color: #253611;
+  color: #253611;
+  transition: 0.3s;
+  font-family: checfont1;
+}
+
+button#criterios-button:hover{
+  color: #fff;
+  background-color: #253611;
+}
+
+div#main_glosario{
+  width: 100%;
+  height: 100%;
+  padding-left: 380px;
+  padding-top: 55px;
+}
+
+div#content-glosario{
+  width: 100%;
+  background-color: rgba(26, 125, 23, 0.5);
+}
+
+.tabs{
+  font-family: checfont1;
+  transition: 0.3s;
+}
+
+.tabs-content{
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+div#recursos{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  border-style: solid;
+  border-width: 1.1px;
+  border-color: grey;
+  border-radius: 5px;
+  background-image: url(../img/generalidades-fondo.png);
+  background-size: cover;
+}
+
+button#recursos-button{
+  background-color: #253611;
+  color: #fff;
+  width: 50%;
+  transition: 0.3s;
+  align-self: center;
+  font-family: checfont1;
+}
+
+button#recursos-button:hover{
+  background-color: #92c849;
+  color: #000;
+  border-color: transparent;
 }
 
 /* @MEDIA QUERYS*/
