--- a/css/contenido.css
+++ b/css/contenido.css
@@ -54,7 +54,7 @@ body {
 #nav {
   padding-left: 380px;
   width: 100%;
-  position: fixed;
+  position: relative;
 }
 
 .top-bar {
@@ -80,15 +80,14 @@ div#main_generalidades {
   width: 100%;
   height: 100%;
   padding-left: 380px;
-  padding-top: 55px;
 }
 
 div#generalidades {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  width: 80%;
-  height: 80%;
+  width: 90%;
+  height: 90%;
   border-style: solid;
   border-width: 1.1px;
   border-color: grey;
@@ -112,7 +111,7 @@ div#content-generalidades {
   display: flex;
   justify-content: center;
   width: 90%;
-  height: 85%;
+  height: 70%;
   background-color: rgba(26, 125, 23, 0.5);
   font-family: checfont1;
   color: white;
@@ -123,17 +122,14 @@ div#content-generalidades {
 }
 
 div#content-criterios {
-  display: flex;
-  justify-content: center;
   width: 90%;
-  height: 85%;
+  height: 70%;
   background-color: rgba(26, 125, 23, 0.5);
   font-family: checfont1;
   color: white;
   padding: 3%;
   overflow-y: auto;
   border-radius: 5px;
-  flex-direction: column;
 }
 
 p {
