--- a/css/contenido.css
+++ b/css/contenido.css
@@ -350,6 +350,7 @@ div#ficheros-display {
 div#area-ficheros {
   display: flex;
   width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.1);
 }
 
