--- a/css/contenido.css
+++ b/css/contenido.css
@@ -223,7 +223,7 @@ div#recursos {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: 100%;
+  height: auto;
   border-style: solid;
   border-width: 1.1px;
   border-color: grey;
@@ -341,6 +341,7 @@ div#filtros-herramientas {
   display: flex;
   width: 100%;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 div#ficheros-display {
@@ -352,6 +353,19 @@ div#area-ficheros {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+select{
+  margin: 0px;
+  font-family: checfont1;
+}
+
+label{
+  font-family: checfont1;
+}
+
+option{
+  font-family: checfont1 !important;
 }
 
 /* @MEDIA QUERYS*/
